# optimal_structure_of_graph_traversal

./: .gitignore  CMakeLists.txt
include/algorithm/: BestSpaceConstruction.hpp  Construction.hpp  Decomposition.hpp  RankSeeking.hpp  TraversalAlgo.hpp
include/graph/: AdjListGraph.hpp  AdjMatrixGraph.hpp  Constants.hpp  Graph.hpp  Node.hpp
include/metrics/: DistributionStorage.hpp  Metrics.hpp  MetricsResStorage.hpp
include/operation/: GraphGen.hpp  ReGraph.hpp  Utility.hpp
scripts/: FastMake.py  center_low_high.py  trial_3_res_anlys.py  trial_6_autorun.py  trial_6_visualize_distribution.py  trial_7_anlys.py  trial_7_autorun.py  trial_8_anlys.py  trial_8_autorun.py  two_branch_from_center.py
src/algorithm/: BestSpaceConstruction.cpp  Construction.cpp  Decompositon.cpp  RankSeeking.cpp  TraversalAlgo.cpp
src/graph/: AdjListGraph.cpp  AdjMatrixGraph.cpp
src/metrics/: DistributionStorage.cpp  Metrics.cpp  MetricsResStorage.cpp
src/operation/: GraphGen.cpp  Utility.cpp
src/trials/: Trial_1.cpp  Trial_2_1.cpp  Trial_2_2.cpp  Trial_3.cpp  Trial_4.cpp  Trial_5.cpp  Trial_6.cpp  Trial_7.cpp  Trial_8.cpp
